--- a/style.css
+++ b/style.css
@@ -34,38 +34,39 @@ body {
   backdrop-filter: blur(70px);
   padding: 24px 360px;
   box-sizing: border-box;
-  
+  /* margin-top: 20px;
+  margin-bottom: 20px; */
 }
 
 .pageLogo {
   height: 20px;
   vertical-align: middle;
-
- 
 }
-
-
 
 .navbar li {
   display: inline-block;
-  padding-left: 40px;
-  padding-right: 40px;
+  /* padding-left: 40px;
+  padding-right: 40px; */
+  
 }
 
 .navbar a {
   text-decoration: none;
-  
+  padding: 24px 40px;
 }
 
-.navbar li:hover {
+.navbar a:hover {
   /* border-bottom: 2px solid #fca326; */
   background-color: #fca326;
+  /* height: 10px; */
+  color: #0d1017;
+  padding: 24px 40px;
+  /* background-color: antiquewhite; */
 }
 
 .navbar ul {
   float: right;
 }
-
 
 /* -------------SOCIAL MEDIA ----------- */
 
@@ -83,9 +84,9 @@ body {
   padding: 10px;
 }
 
-.smAsset{
+.smAsset {
   width: 30px;
-  border-radius:4px;
+  border-radius: 4px;
   margin: 8px 0;
   padding: 2px;
   border: 2px solid transparent;
@@ -163,7 +164,7 @@ body {
 
 .mouseScroll {
   position: absolute;
-  bottom:  231px;
+  bottom: 231px;
   left: 144px;
   height: 108px;
   animation-name: scroll;
@@ -202,9 +203,9 @@ body {
 }
 
 .skillIcon:hover {
- background-color: #072541;
- border: 1px solid #fca326;
- transform: scale(150%);
+  background-color: #072541;
+  border: 1px solid #fca326;
+  transform: scale(150%);
 }
 
 #skillPage,
@@ -218,12 +219,12 @@ body {
   flex-wrap: wrap;
 }
 
-
-
 /* -------------- BLOG PAGE -------------- */
 
 #blogPage {
   display: inline;
+  position: relative;
+  z-index: 2;
 }
 
 .blogContent {
@@ -324,11 +325,18 @@ body {
   margin: 40px 0px;
   width: 220px;
   display: block;
+  
 }
 
 #contactPage {
   display: flex;
   gap: 50px;
+  background: linear-gradient(
+    318deg,
+    rgba(7, 37, 65, 1) 0%,
+    rgba(13, 16, 23, 1) 25%,
+    rgba(7, 9, 14, 1) 100%
+  );
 }
 
 /* -------------- FOOTER PAGE -------------- */
